# distributed-der

./: .dockerignore  .env.agent  .env.agent.2  .env.headend  .gitignore  Cargo.toml  DECOMPOSE_PLAN.md  DESIGN.md  DESIGN_DETAILS.md  DESIGN_HIGHLEVEL.md  DESIGN_HIGHLEVEL_SVG.md  README.md  agent_file_populator.py  assets.yaml  docker-compose.edge.yml  docker-compose.yml  docker-compose_latest.yml  ignition_ssot.json  ignition_tags.json  run_der_headend.sh  run_edge_agent.sh  run_edge_agent_1.sh
agent_launcher/: Cargo.toml
agent_launcher/src/: main.rs
der_control_plane/: Cargo.toml
der_headend/: Cargo.toml  Dockerfile  assets.yaml  assets_test.yaml  build.rs  opcua_map_campus.yaml  opcua_map_gateway.yaml
der_headend/src/: agent.proto  db.rs  grpc.rs  http.rs  main.rs  models.rs
docs/: 00_MVP_SCOPE.md  01_ARCHITECTURE_CURRENT.md  02_CAPABILITY_MATRIX.md  03_ROADMAP_V1.md  04_RFC_EDGE_GATEWAY_MODE.md  05_TEST_PLAN_GATEWAY_MODE.md  06_CUTSHEET.md  07_TELEMETRY_MINIMAL_PILOT.md  08_INSTALLATION.md  09_RUNBOOK.md  10_MVP_USER_INTERFACE.md  11_SSOT_Configuration_Report.md  12_SSOT_RUNBOOK.md
edge_agent/: Cargo.toml  Dockerfile  build.rs
edge_agent/src/: agent.proto  main.rs
ignition/: scripts.py
opc_test_client/: Cargo.toml
opc_test_client/pki/own/: cert.der
opc_test_client/pki/private/: private.pem
opc_test_client/src/: main.rs
sim_core/: Cargo.toml
sim_core/src/: lib.rs
src/: main.rs
telemetry_event_layer/: Cargo.toml
tools/: generate_ignition_files.py  render_ssot_report.py
