[package]
name = "edge_agent"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0"
axum = "0.8.7"
chrono = { version = "0.4", features = ["serde", "clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-stream = "0.1"
futures-util = "0.3"
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
sim_core = { path = "../sim_core" }

[build-dependencies]
tonic-build = "0.12"
